--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
-section .grid{
-	border: 4px solid black;
-	height: 100px;
-	width: 100px;
+*{
+	box-sizing: border-box;
+	border: 1px solid red;
+	margin: 0;
+	padding: 0;
 }
+header {
+	text-align: center;
+	padding: 1em;
+	
+}
+.board{
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 300px;
+	margin: auto;
+}
+.board div{
+	flex-basis: 33.33%;
+	height: 100px;
+	border: 2px solid black;
+	background-color: white;
+}
+
