--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ header {
 	padding: 1em;
 	
 }
+#parentBox{
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	text-align: center;
+}
 .board{
 	display: flex;
 	flex-wrap: wrap;
@@ -20,5 +24,7 @@ header {
 	height: 100px;
 	border: 2px solid black;
 	background-color: white;
+	font-size: 70px;
+	cursor: pointer;
 }
 
