--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
 
+.board{ 
+	display: grid;
+	height: 300px;
+	width: 300px;
+	box-sizing: border-box;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	max-width: 400px;
+	margin: 10px auto;
+	
+}
+.board div{
+	
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: 2px solid black;
+	background-color: white;
+	font-size: 50px;
+	cursor: pointer;
+}
+
 header {
 	text-align: center;
 	padding: 1em;
 	
 }
-#parentBox{
+#winMsg{
+	text-align: center;
+}
+#refreshBtn{
+	display: block;
+	margin: 20px auto;
+}
+section{
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	text-align: center;
 }
-.board{
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 300px;
-	margin: auto;
-}
-.board div{
-	flex-basis: 33.33%;
-	height: 100px;
-	border: 2px solid black;
-	background-color: white;
-	font-size: 70px;
-	cursor: pointer;
-}
+ 
 
